apps/invoiceninja/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invoiceninja
  labels:
    app.kubernetes.io/part-of: homelab
