apps/invoiceninja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoiceninja
  namespace: invoiceninja
  labels:
    app.kubernetes.io/name: invoiceninja
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: invoiceninja
  ports:
    - name: http
      port: 80
      targetPort: http
